# aiohook

./: README.md  requirements-base.txt  requirements.txt  setup.cfg  setup.py  tox.ini
aiohook/: __init__.py  type_inference.py
tests/: examine_types.py
tests/functional/text_processing_app/: setup.py
tests/functional/text_processing_app/tests/: input_file_1.txt
tests/functional/text_processing_app/tests/features/: textproc_plugin.feature
tests/functional/text_processing_app/textproc/: main.py  pluginspecs.py
tests/functional/text_processing_app/textproc_plugin/: __init__.py  rudin_shapiro_decoder.py  rudin_shapiro_encoder.py  rudin_shapiro_xor.py  rudin_sharpio_seq.py  settings.py  tokenizer.py
