[metadata]
name = aiohook
description = A simple plugin system for async applications
author = Alexandre Gravier
author_email = al.gravier@gmail.com
url = https://github.com/agravier/aiohook
long_description_content_type = text/markdown
keywords = plugin, hook, async, asyncio, trio, curio
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7

[options]
packages = find:
include_package_data = True
zip_safe = False
setup_requires =
    setuptools_scm
install_requires =
    anyio >= 1.0.0

[options.packages.find]
exclude =
    docs
    tests

[bdist_wheel]
universal = 1

[coverage:report]
show_missing = true
